--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "~7.2",
-        "guzzlehttp/guzzle": "^7.0",
-        "vlucas/phpdotenv": "^5.1"
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=8.0",
